--- a/client/cat/bio/bio.html
+++ b/client/cat/bio/bio.html
@@ -46,14 +46,14 @@
 		</div>
 		{{#if isGenreView}}
 		<div class="biotegund">
-			<button>Drama</button>
-			<button>Teikni</button>
-			<button>Hryllings</button>
-			<button>Spennu</button>
-			<button>Gaman</button>
-			<button>Ævintýra</button>
-			<button>Hasar</button>
-			<button>Annað</button>
+			<button class="gen">Drama</button>
+			<button class="gen">Teikni</button>
+			<button class="gen">Hryllings</button>
+			<button class="gen">Spennu</button>
+			<button class="gen">Gaman</button>
+			<button class="gen">Ævintýra</button>
+			<button class="gen">Hasar</button>
+			<button class="gen">Sci-Fi</button>
 		</div>
 		{{/if}}
 		<div class="bioorder">
