before removal of autopublish

--- a/client/cat/bio/bio.html
+++ b/client/cat/bio/bio.html
@@ -37,7 +37,7 @@
 			<div class="bioweek" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
 				<ul>
 				{{#each getWeek}}
-					<li class="biodagur">{{this.dd}}<span>{{this.dn}}</span></li>
+					<li class="{{this.c}}">{{this.dd}}<span>{{this.dn}}</span></li>
 				{{/each}}
 				</ul>
 			</div>
